config-root/namespaces/jx-staging/fmtok8s-api-gateway/fmtok8s-api-gateway-fmtok8s-api-gateway-deploy.yaml
# Source: fmtok8s-api-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmtok8s-api-gateway-fmtok8s-api-gateway
  labels:
    draft: draft-app
    chart: "fmtok8s-api-gateway-0.0.103"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: fmtok8s-api-gateway-fmtok8s-api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: fmtok8s-api-gateway-fmtok8s-api-gateway
    spec:
      containers:
        - name: fmtok8s-api-gateway
          image: "gcr.io/camunda-researchanddevelopment/fmtok8s-api-gateway:0.0.103"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
